spacing fix for CDL menu

--- a/sites/all/themes/pul_development_theme/css/pul-development-theme-alpha-default.css
+++ b/sites/all/themes/pul_development_theme/css/pul-development-theme-alpha-default.css
@@ -1437,3 +1437,16 @@ input[type='text'],input[type='email'],input[type='phone'],input[type='address']
 .node-type-libraries .grid-3 .view-id-libraries .view-content i {
     margin-right: 5px;
 }
+
+
+/* CDL Subsite Overrides */
+
+/* padding fix */
+.context-collections .grid-12,
+.context-collections-and-collection-development .grid-12, 
+.context-collections-and-collection-development .grid-3 {
+  padding-right: 0;
+  padding-left: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
